regresando al commit 50472273af18f5a5e26ab8a1df1ddbf00d0ce76a

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,8 +1,5 @@
 <main id="home" class="grid">
-    <img class="logo" src="../../../assets/img/ic_launcher.png" alt="">
-    <input id="user" class="rectangle" type="number" placeholder="Número de empleado/a">
-    <label id="lb-user" for="user"><i class="far fa-user fa-2x"></i></label>
-    <input id="password" class="rectangle" type="password" placeholder="Clave de empleado/a">
-    <label id="lb-password" for="password"><i class="fas fa-lock fa-2x"></i></label>
-    <button (click)=goOrder() type="button" id="btn-log-in" class="ellipse" type="button"></button>
+  <img class="logo" src="assets/img/ic_launcher.png" alt="">  <input id="user" class="rectangle" type="number" placeholder="Número de empleado/a">
+  <input id="password" class="rectangle" type="password" placeholder="Clave de empleado/a">
+  <button (click)=goMenu() type="button" id="btn-log-in" class="ellipse" type="button"></button>
 </main>
