--- a/src/styles.css
+++ b/src/styles.css
@@ -399,6 +399,10 @@ footer {
     overflow: scroll;
 }
 
+#ticket::-webkit-scrollbar {
+    display: none;
+}
+
 .elements {
     display: grid;
     grid-template-columns: 10% 35% 35% 10%auto;
