--- a/src/app/components/shared/footer/footer.component.html
+++ b/src/app/components/shared/footer/footer.component.html
@@ -2,7 +2,7 @@
     <nav id="nav-footer" class="nav">
         <p id="p-total" class="font-roboto total">Total:</p>
         <button id="confirm" class="btn-footer font-roboto" type="button">Confirmar orden</button>
-        <p id="p-cost" class="font-roboto total">$</p>
+        <p *ngIf="getsumPrice()" id="p-cost" class="font-roboto total">$</p>
         <button id="cancel" class="btn-footer font-roboto" type="button">Cancelar orden</button>
     </nav>
 
